# trench

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/domain/: contract.go  escrow.go  job.go  message.go  profile.go  proposal.go  review.go  service.go  user.go
backend/internal/handler/: auth_handler.go  contract_handler.go  job_handler.go  message_handler.go  notification_handler.go  profile_handler.go  response.go  review_handler.go  service_handler.go  upload_handler.go  websocket_handler.go
backend/internal/middleware/: auth.go  cors.go  logging.go
backend/internal/repository/: interfaces.go
backend/internal/service/: auth_service.go  contract_service.go  job_service.go  (+5 more)
backend/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_portfolio_extensions.down.sql  002_portfolio_extensions.up.sql  003_seed_demo_data.down.sql  003_seed_demo_data.up.sql  004_services_marketplace.down.sql  004_services_marketplace.up.sql  005_chat_enhancements.down.sql  005_chat_enhancements.up.sql
docker/: Dockerfile.backend  nginx.conf
frontend/: index.html
frontend-new/: FRONTEND_API_DOCS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-new/src/: App.tsx  index.css  main.tsx
frontend/css/: main.css
frontend/js/: config.js  main.js
solana-program/: Anchor.toml
solana-program/programs/trenchjob-escrow/: Cargo.toml
solana-program/programs/trenchjob-escrow/src/: lib.rs
(+155 files in other folders)
