[package]
name = "trenchjob-escrow"
version = "0.1.0"
description = "TrenchJobs Escrow Program - Trustless escrow for freelance payments on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trenchjob_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
